fix dependencies for installation

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ classifiers =
 
 [options]
 py_modules = setuptools_golang
+install_requires =
+    setuptools
 python_requires = >=3.7
 
 [options.entry_points]
