--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   main:
-    uses: asottile/workflows/.github/workflows/tox.yml@v1.2.0
+    uses: asottile/workflows/.github/workflows/tox.yml@v1.5.0
     with:
-      env: '["pypy3", "py37", "py38", "py39", "py310"]'
+      env: '["pypy3", "py38", "py39", "py310", "py311", "py312"]'
       os: ubuntu-latest
