remove python 2 virtualenv remnants

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py,pre-commit
 
 [testenv]
 deps = -rrequirements-dev.txt
+passenv = *
 setenv = PWD={toxinidir}
 commands =
     coverage erase
