--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,12 @@ on:
   pull_request:
 
 jobs:
-  main:
+  main-windows:
+    uses: asottile/workflows/.github/workflows/tox.yml@v1.5.0
+    with:
+      env: '["py38"]'
+      os: windows-latest
+  main-linux:
     uses: asottile/workflows/.github/workflows/tox.yml@v1.5.0
     with:
       env: '["pypy3", "py38", "py39", "py310", "py311", "py312"]'
